@@ -853,6 +853,20 @@ module Net
       copy_internal("UID COPY", set, mailbox)
     end
 
+    # Sends a MOVE command to move the specified message(s) to the end
+    # of the specified destination +mailbox+. The +set+ parameter is
+    # a number, an array of numbers, or a Range object. The number is
+    # a message sequence number.
+    # The IMAP MOVE extension is described in [RFC-6851].
+    def move(set, mailbox)
+      copy_internal("MOVE", set, mailbox)
+    end
+
+    # Similar to #move(), but +set+ contains unique identifiers.
+    def uid_move(set, mailbox)
+      copy_internal("UID MOVE", set, mailbox)
+    end
+
     # Sends a SORT command to sort messages in the mailbox.
     # Returns an array of message sequence numbers. For example:
     #
